# CUDA_HPC_self_handbook

./: .gitignore  LICENSE  README.md  handbook.md
docs/: AI_Infra_fundamentals.md  CUDA_FP8.md  CUDA_programming.md  Cpp_new_features.md  HardwareBasics.md  Performance_analysis.md  Personal_resume.md  Questions.md  handbook.md
experiments/: gemm_register_ncu_report.ncu-rep  gemm_shared_ncu_report.ncu-rep
questions/: GPU_and_CUDA.md
results/: gemm_register_performance_Source.csv  gemm_register_performance_report1.txt  gemm_shared.txt  gemm_shared_profiling.txt
src/: CMakeLists.txt  DeviceBuffer.cuda  cuda_RAII.cu  gemm.cu  gemm_register.cu  gemm_shared.cu  occupancy_test.ncu-rep  transpose.cu
src/cpp_new_features/: unique_ptr.cpp
src/cuda_stream/: cuda_asyncTransfer_and_callback.cu  cuda_stream_basics.cu
src/cutlass_gemm/: CMakeLists.txt  gemm_simt.cu  gemm_tensor_core.cu
src/models/: sgemm.cu  softmax.cu  transpose.cu
